fix spacing bottom in single item page of collection

--- a/public/wp-content/themes/rhs/assets/scss/tainacan/_single_collection_items.scss
+++ b/public/wp-content/themes/rhs/assets/scss/tainacan/_single_collection_items.scss
@@ -24,6 +24,7 @@
             }
         }
         .single-item-collection{
+            min-height: 23.5vh;
             &.margin-two-column {
                 margin: 0 8.33333333334%;
             }
